--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "TOP | JS | Project | webpack practice",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "dev": "webpack serve",
+    "deploy": "git subtree push --prefix dist origin gh-pages"
   },
   "keywords": [],
   "author": "sean-garwood <seansgarwood@gmail.com>",
